<resources>
    <string name="app_name">Opiekun Leków</string>

    <string name="scan_qr_code">Skanuj kod qr</string>
    <string name="med_list">Lista leków</string>

    <!--    activity patient card   -->
    <string name="share">Udostępnij</string>
    <string name="hour">Godzina</string>
    <string name="how_much">Ile</string>
    <string name="notes">Uwagi</string>
    <string name="med_given">Podane?</string>
    <string name="del_med">Usuń lek</string>
    <string name="add_med">Dodaj lek</string>

    <!--   activity add med -->
    <string name="title_add_med">Dodaj lek</string>
    <string name="med_name">Nazwa leku</string>
    <string name="from">od</string>
    <string name="to">do</string>
    <string name="med_duration">Okres podawania leku</string>
    <string name="doses">Dawki</string>
    <string name="cancel">anuluj</string>
    <string name="add_dos">dodaj dawkę</string>
    <string name="begin_date">Rozpoczęcie przyjmowania</string>
    <string name="end_date">Zakończenie przyjmowania</string>
    <string name="quantity">Ilość</string>
    <string name="pack_quant">Ilość opakowań leku</string>
    <string name="patient_name">Nazwisko pacjenta</string>
    <string name="patient">Pacjent</string>
    <string name="rp_nr">Kod e-recepty</string>
    <string name="title_add_med_to_list">Dodaj receptę</string>
    <string name="medicine">Lek</string>
    <string name="date_begin">data rozpoczęcia</string>
    <string name="date_end">data zakończenia</string>

</resources>