<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ActivityAddMed"
    android:padding="@dimen/margin"
    android:background="@color/OLDark">

    <!--https://developer.android.com/guide/topics/ui/controls/spinner.html-->
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_add_med"
        android:textSize="@dimen/text_size_big"
        android:textStyle="bold"
        android:textColor="@color/lightText"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/margin"
        />

    <!-- https://stackoverflow.com/questions/37019941/how-to-add-a-hint-in-spinner-in-xml   -->
    <Spinner
        android:id="@+id/s_name"
        android:layout_width="wrap_content"
        android:minWidth="120dp"
        android:prompt="@string/med_name"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginSmall"
        android:text="@string/med_duration"
        android:textColor="@color/lightText"
        android:textSize="@dimen/text_size_b"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from"
            android:textColor="@color/lightText"
            android:layout_marginEnd="@dimen/marginVerySmall"/>

        <EditText
            android:hint="@string/begin_date"
            android:id="@+id/etd_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="date" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/marginVerySmall"
            android:layout_marginStart="@dimen/marginVerySmall"
            android:text="@string/to"
            android:textColor="@color/lightText"/>

        <EditText
            android:id="@+id/etd_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="date"
            android:hint="@string/end_date" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginSmall"
        android:layout_marginBottom="@dimen/marginVerySmall"
        android:text="@string/doses"
        android:textColor="@color/lightText"
        android:textSize="@dimen/text_size_b"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:showDividers="middle|beginning|end">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/OLOrange">

            <TextView
                android:id="@+id/tv_header_hour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:padding="10sp"
                android:text="@string/hour" />

            <TextView
                android:id="@+id/tv_header_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:padding="10sp"
                android:text="@string/how_much" />

            <TextView
                android:id="@+id/tv_header_notes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:padding="10sp"
                android:text="@string/notes" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:padding="10sp"
                android:textColor="@color/lightText"
                android:text="12:00" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:padding="10sp"
                android:text="1"
                android:textColor="@color/lightText"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:padding="10sp"
                android:text="po posiłku"
                android:textColor="@color/lightText"/>
        </TableRow>
        <TableRow
            android:layout_marginTop="@dimen/marginSmall"
            android:gravity="center">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:clickable="true"
                app:srcCompat="@android:drawable/ic_menu_add"
                app:fabSize="mini"
                android:contentDescription="@string/add_dos" />

        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="bottom"
        >

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:srcCompat="@drawable/ic_baseline_done_24"
            android:focusable="true"
            android:contentDescription="@android:string/ok"
            android:backgroundTint="@color/OLGreen"
            app:borderWidth="0dp"/>

        <Space
            android:layout_width="@dimen/marginSmall"
            android:layout_height="0dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:srcCompat="@android:drawable/ic_delete"
            android:focusable="true"
            android:contentDescription="@string/cancel"
            android:backgroundTint="@color/OLOrange"
            app:borderWidth="0dp"/>
    </LinearLayout>



</LinearLayout>