<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ActivityAddPrescription"
    android:padding="@dimen/margin"
    android:background="@color/OLDark">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_add_med_to_list"
        android:textSize="@dimen/text_size_big"
        android:textStyle="bold"
        android:textColor="@color/lightText"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/margin"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom = "@dimen/margin">
        <TextView
            android:id="@+id/tv_pesel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Pesel"
            android:textColor="@color/lightText"/>
        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"/>

        <TextView
            android:id="@+id/tv_patient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/patient"
            android:layout_gravity="end"
            android:textColor="@color/lightText" />
    </LinearLayout>


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text = "@string/medicine"
                android:textColor="@color/lightText"/>

            <Spinner
                android:id="@+id/s_medicine"
                android:layout_width="wrap_content"
                android:minWidth="120dp"
                android:minHeight="30dp"
                android:prompt="@string/med_name"
                android:textColor="@color/lightText"

                android:layout_weight="1"
                android:layout_height="wrap_content" />
            <!-- https://stackoverflow.com/questions/37019941/how-to-add-a-hint-in-spinner-in-xml   -->


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/quantity"
                android:textColor="@color/lightText"/>


            <EditText
                android:id="@+id/et_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textColor="@color/lightText"
                android:inputType="numberDecimal"
                android:hint="@string/pack_quant"
                android:layout_weight="1"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/rp_nr"
                android:textColor="@color/lightText"/>


            <EditText
                android:id="@+id/et_prescr_nr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textColor="@color/lightText"
                android:inputType="numberDecimal"
                android:hint="@string/rp_nr"
                android:layout_weight="1"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/date_begin"
                android:textColor="@color/lightText"/>

            <EditText
                android:id="@+id/et_date_begin"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:textColor="@color/lightText"
                android:hint="@string/begin_date"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/date_end"
                android:textColor="@color/lightText"/>

            <EditText
                android:id="@+id/et_date_end"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:textColor="@color/lightText"
                android:hint="@string/end_date"/>
        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="bottom"
        >

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:srcCompat="@drawable/ic_baseline_done_24"
            android:focusable="true"
            android:contentDescription="@android:string/ok"
            android:backgroundTint="@color/OLGreen"
            app:borderWidth="0dp"/>

        <Space
            android:layout_width="@dimen/marginSmall"
            android:layout_height="0dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:srcCompat="@android:drawable/ic_delete"
            android:focusable="true"
            android:contentDescription="@string/cancel"
            android:backgroundTint="@color/OLOrange"
            app:borderWidth="0dp"/>
    </LinearLayout>
</LinearLayout>