<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/OLDark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin">

        <TextView
            android:id="@+id/tv_med_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Nazwa leku"
            android:layout_weight="1"
            android:textColor="@color/lightText"
            android:textSize="@dimen/text_size_big" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:contentDescription="@string/del_med"
            android:focusable="true"
            app:fabSize="mini"
            app:srcCompat="@android:drawable/ic_delete" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_duration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/lightText"
        android:layout_marginBottom="@dimen/marginSmall"
        android:text="20.04 – 24.05.2022" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:showDividers="middle|beginning|end">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/OLOrange">

            <TextView
                android:id="@+id/tv_header_hour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:padding="10sp"
                android:text="@string/hour" />

            <TextView
                android:id="@+id/tv_header_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:padding="10sp"
                android:text="@string/how_much" />

            <TextView
                android:id="@+id/tv_header_notes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="4"
                android:padding="10sp"
                android:text="@string/notes" />

            <TextView
                android:id="@+id/tv_header_given"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:padding="10sp"
                android:text="@string/med_given" />
        </TableRow>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_doses"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

    </TableLayout>

</LinearLayout>